--- a/css/button.less
+++ b/css/button.less
@@ -27,6 +27,7 @@
     outline: 0;
     padding: 0 15px;
     text-align: center;
+    text-decoration: none;
     text-transform: uppercase;
     transition: all .3s ease-out;
 
