--- a/css/button.css
+++ b/css/button.css
@@ -15,6 +15,7 @@
   outline: 0;
   padding: 0 15px;
   text-align: center;
+  text-decoration: none;
   text-transform: uppercase;
   transition: all 0.3s ease-out;
 }
