--- a/css/style.less
+++ b/css/style.less
@@ -1,323 +1,323 @@
-/* Imports */
 @import "reset.css";
+@import "base.css";
 @import "button.css";
 
-/* Variables */
-@accentColor: #0f8491;
-@bgGrey: #f0f0f0;
-@darkGrey: #888;
-@lightGrey: lightgrey;
+/* Colors */
 
-@boxShadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
+@background: #303030;
+@header: #212121;
+@footer: #000;
+@fontBasicPrimary: rgba(255, 255, 255, 1);
+@fontBasicSecondary: rgba(255, 255, 255, 0.7);
+@fontBasicDisabled: rgba(255, 255, 255, 0.5);
+@fontAccent: @primaryColor;
+@darkGrey: #424242;
+
+/* Accents */
+
+@primaryColor: #2196F3;
+@red: #D50000;
+
+/* Box-Shadow */
+
+@card_boxshadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+0 1px 5px 0 rgba(0, 0, 0, 0.12),
+0 3px 1px -2px rgba(0, 0, 0, 0.2);
+@btn_boxshadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+0 2px 10px 0 rgba(0, 0, 0, 0.12);
+@btn_boxshadow_hover: 0 5px 11px 0 rgba(0, 0, 0, 0.18),
+0 4px 15px 0 rgba(0, 0, 0, 0.15);
+
+/* Mixins */
+
+.parallaxBackground(@url) {
+    background-attachment: fixed;
+    background-image: url(@url);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.fontAwesomeContent(@unicode) {
+    content: @unicode;
+    font-family: 'FontAwesome';
+    font-style: normal;
+    font-variant-ligatures: normal;
+    font-variant-caps: normal;
+    font-variant-numeric: normal;
+    font-weight: normal;
+    font-stretch: normal;
+}
 
 
-body{
-    background-color: @bgGrey;
+/* LESS*/
+
+body {
+    background-color: @background;
+    color: @fontBasicPrimary;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+    height: 100%;
+    margin: 0;
     min-width: 320px;
-}
-
-@media (max-width: 500px){
-    body{
-        font-size: 14px;
-    }
-}
-
-.overlay{
-    background-color: #000;
-    bottom: 0;
-    cursor: pointer;
-    left:0;
-    opacity: 0;
-    position:fixed;
-    top:0;
-    right: 0;
-    z-index:-1;
-}
-
-nav{
-    bottom: 0;
-    left: 0;
-    position: fixed;
-    top: 0;
-    z-index: 9001;
-    
-    >button{
-        background: transparent;
-        border: none;
-        cursor: pointer;
-        height: 45px;
-        margin-left:20px;
-        margin-top: 25px;
+    padding: 0;
+    >.container {
+        height: auto;
+        min-height: 100%;
         position: relative;
-        width: 45px;
-        z-index:2;
+    }
+    a{
+        color: @primaryColor;
+    }
+}
 
-        &:active,&:focus{
-            outline:none;
-        }
-        span{
-            background-color: @accentColor;
-            border-radius: 3px;
-            display: block;
-            font-size: 0;
-            height: 6px;
-            position: absolute;
-            width: 45px;
-            transition: .7s ease-in-out;
-        }
-
-        span:nth-child(1){
-            top:0px;
-        }
-        span:nth-child(2){
-            top:15px;
-        }
-        span:nth-child(3){
-            top:30px;
+header {
+    background-color: @header;
+    height: 100px;
+    position: relative;
+    width: 100%;
+    z-index: 100;
+    .title {
+        color: @fontAccent;
+        font-size: 3.5em;
+        line-height: 100px;
+        margin-left: 75px;
+        @media (max-width: 600px) {
+            font-size: 2.3em;
+            margin-left: 60px;
         }
     }
-    
-    ul{
+    .toggle-nav {
+        background-color: @primaryColor;
+        border-radius: 50%;
+        box-shadow: @btn_boxshadow;
+        height: 3em;
+        left: 20px;
+        padding: 0;
+        position: fixed;
+        top: 30px;
+        transform: rotateY(0);
+        width: 3em;
+        z-index: 101;
+        transition: transform .5s, background-color .5s;
+        span {
+            font-size: 0;
+        }
+        &::before {
+            .fontAwesomeContent('\f0c9');
+            color: @fontBasicPrimary;
+            display: block;
+            font-size: 1.7em;
+            text-align: center;
+            width: 100%;
+            transition: font-size 0.05s ease-in;
+        }
+        &:hover::before {
+            font-size: 2em;
+            transition: font-size 0.05s ease-in;
+        }
+         :hover {
+            box-shadow: @btn_boxshadow_hover;
+        }
+        .nav-active & {
+            background-color: @red;
+            transform: rotateY(180deg);
+            transition: transform .5s, background-color .5s;
+            &::before {
+                content: '\f00d';
+            }
+        }
+        @media (max-width:600px) {
+            left: 10px;
+        }
+    }
+    nav {
+        background-color: fade(#000, 90);
+        bottom: 0;
+        height: 100%;
+        left: 0;
+        overflow: hidden;
         position: fixed;
         top: 0;
-        bottom: 0;
-        left: 0;
-        background-color: @accentColor;
-        overflow: hidden;
         width: 0;
-        padding-top: 100px;
-        z-index:1;
-        transition: .5s ease-in-out;
-        
-        li{            
-            width:250px;
-            padding: 0 20px;
-            min-height: 50px;
-            line-height:50px;
-            &.section-title{
-                font-weight: 700;
-            }
-            &:not(.section-title):hover{
-                background-color: rgba(0,0,0,0.1);
-            }
-            a{
-                color: #fff;
-                cursor: pointer;
-                text-decoration: none;
+        z-index: 100;
+        transition: width .3s ease-out;
+        .nav-active & {
+            width: 100%;
+        }
+        ul {
+            margin-top: 30px;
+            position: relative;
+            text-align: center;
+            top: 25%;
+            width: 100%;
+            a {
+                color: @fontBasicSecondary;
                 display: block;
-                width: inherit;
-                height: inherit;
+                font-size: 3em;
+                padding: 8px;
+                text-decoration: none;
+                transition: 0.3s;
+                &:hover {
+                    color: @fontBasicPrimary;
+                }
             }
         }
     }
 }
-.nav-active{
-     nav{
-        button{
-            span:nth-child(1),
-            span:nth-child(2),
-            span:nth-child(3){
-                background-color: #fff;
-            }
-            span:nth-child(1){
-                width: 50px;
-                top: 15px;
-                transform: rotateZ(-45deg) rotateY(180deg);
-            }
-            span:nth-child(2){
-                transform: rotateY(90deg);
-            }
-            span:nth-child(3){
-                width: 50px;
-                top: 15px;
-                transform: rotateZ(45deg) rotateY(180deg);
-            }
-        }
-        ul{
-            width:250px;
-            transition: .5s ease-in-out;
-        }
-     }
-     
-     .overlay{
-         z-index: 9000;
-         opacity: 0.7;
-         transition: opacity .5s ease-in;
-     }
 
-}
-
-
-.card{
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: @boxShadow;
-    margin:  20px auto;
-    max-width: 600px;
-    padding: 20px;
-
-    h2{
-        color: @accentColor;
-        font-size: 2.5em;
-        padding-bottom: 20px;
-    }
-    h3{
-        font-size: 1.5em;
-        font-weight: 600;
+footer {
+    background-color: fade(@footer, 70);
+    bottom: 0;
+    height: 75px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    .copyright {
+        line-height: 75px;
     }
 }
 
-.section{
-    padding: 30px;
-
-    .section-content{
-        border: 1px solid @accentColor;
-        margin: 0 auto;
-        max-width: 800px;
-        padding: 1em;
+#main {
+    section {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
         position: relative;
+        &[data-id-section="1"] {
+            .parallaxBackground("../img/first-slide-background.jpeg");
+            min-height: 100%;
+        }
+        &[data-id-section="2"] {
+            min-height: 300px;
+            display: none;
+        }
+        &[data-id-section="3"] {
+            .parallaxBackground("../img/third-slide-background.jpeg");
+            min-height: 100%;
+        }
+        &[data-id-section="4"] {
+            min-height: 300px;
+            display: none;
+        }
+        &[data-id-section="5"] {
+            .parallaxBackground("../img/last-slide-background.jpg");
+            min-height: 100%;
+        }
+        .card {
+            margin: 20px;
+            min-width: 280px;
+            max-width: 600px;
+            width: 100%;
+        }
+    }
+}
+ 
+#presentation {
+    .card-content {
         text-align: center;
-
-    }
-
-    .section-title {
-        background: @bgGrey;
-        color: @accentColor;
-        display: inline-block;
-        font-size: 2em;
-        margin-top: -1.2em;
-        padding: 0.2em 1em;
+        padding-top: 25px;
+        img {
+            padding: 10px 10px 40px 10px;
+            width: 250px;
+            height: 250px;
+            box-shadow: @card_boxshadow;
+            background-color: #f0f0f0;
+            transform: rotate(-3deg);
+        }
     }
 }
-#menu{
-    position: fixed;
-    right: 10px;
-    top: ~"calc(50% - 30px)";
-    z-index: 10;
 
-    li{
-        height: 16px;
-        padding: 0;
-        width: 15px;
+#competences {
+    .category {
+        margin-top: 10px;
+        .category-name {
+            font-size: 1.2em;
+        }
+    }
+}
 
+#contact {
+    .card-content>div {
+        padding: 10px 0;
+    }
+    .contact-infos{
         a{
-            background-color: @accentColor;
-            border-radius: 50%;
-            cursor: pointer;
-            display: block;
-            height: 6px;
-            margin: 5px auto;
-            width:6px;
-            transition: all 0.5s ease-in-out;
-
-            &:hover{
-                height: 10px;
-                margin: 5px auto;
-                width: 10px;
-                transition: all 0.2s ease-in-out;
+            text-decoration: none;
+            line-height: 1.5em;
+            &::before{
+                color: @fontBasicPrimary;
             }
         }
-        &.active a{
-            height: 12px;
-            margin: 2px auto;
-            width:12px;            
+        .mail-link::before{
+            .fontAwesomeContent('\f0e0');
+            padding-right: 5px;
+        }
+        .phone-link::before{
+            .fontAwesomeContent('\f095');
+            padding-right: 5px;
+        }
+        .linkedin-link::before{
+            .fontAwesomeContent('\f08c');
+            padding-right: 5px;
         }
     }
-}
-
-.plain-page{
-    padding: 75px 40px 0 40px;
-}
-
-
-/* Profil */
-.photo img{
-    border-radius: 50%;
-    width: 200px;
-    
-}
-
-/* Competences */
-#competences{
-    .simple-list >li{
-        margin-bottom: 10px;
-
-        >p{
-            font-weight: 600;
-        }
-    }
-    .float-list{
-        margin: 0 auto; 
-
-        > li{
-            border: 1px solid @lightGrey;
+    .cv-download {
+        .btn {
             display: inline-block;
-            padding: 4px;
-            margin: 0 2px;
-        }   
-    }
-}
-
-/* Experiences */
-#experiences{
-    .job{
-        & + .job{
-            margin-top: 20px;   
-        }
-
-        .title,
-        .employer{
-            display: inline-block
-        }
-
-        .title {
-            font-weight: 600;
-
-            &::after {
-                content: ' - ';
-                display: inline;
+            margin-top: 5px;
+            >span::before {
+                .fontAwesomeContent('\f019');
+                padding-right: 5px;
             }
         }
+    }
+}
 
-        .description {
-            color: #444;
-            text-align: justify;
+.card {
+    background: @darkGrey;
+    box-shadow: @card_boxshadow;
+    border-radius: 2px;
+    padding: 20px;
+    .card-title {
+        color: @fontBasicPrimary;
+        font-size: 2.9em;
+    }
+    .card-subtitle {
+        color: @fontBasicSecondary;
+        font-size: 2em;
+    }
+}
+
+.card-image {
+    background: @background;
+    box-shadow: @card_boxshadow;
+    display: inline-block;
+    margin: 5px;
+    padding: 10px;
+    width: 100px;
+    min-height: 80px;
+    text-align: center;
+    vertical-align: top;
+    .image-container {
+        height: 70px;
+        width: 70px;
+        margin: 0 auto;
+        img {
+            max-height: 70px;
+            max-width: 70px;
         }
     }
-}
-/* Scholarship */ 
-#scholarship{
-    .school + .school{
-        margin-top: 20px;
-    }
-    .school .course{
-        font-weight: 600;
-    }
-} 
-
-
-/* Contact */
-#contact{
-    p{
-        padding: 5px;
-    }
-    .linkedin-link::before{
-        color: #0077b5;
-        content: "\f08c";
-        display: inline;
-        font-family: 'FontAwesome';
+    .image-title {
         font-size: 1em;
-        text-decoration: none;
+        padding: 5px 0;
+    }
+    .image-detail {
+        color: @fontBasicSecondary;
+        font-size: 0.7em;
     }
 }
-
-.back-to-top{
-    margin: 0 auto;
-    margin-top: 100px;
-}
-
 /*
  *  CONTROLES
  */
